--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
     </style>
 </head>
 <body>
+    <nav>
+    <a href="index.html">Home</a> |
+    <a href="about.html">About Us</a>
+</nav>
     <h1>Welcome to Tripti Yoga!</h1>
     <p>Your journey to health and mindfulness starts here. 🌱</p>
     <footer>© 2025 Tripti Yoga</footer>
