--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <nav>
     <a href="index.html">Home</a> |
     <a href="about.html">About Us</a>
+    <a href="contact.html">Contact</a>
     </nav>
     <h1>Welcome to Tripti Yoga!</h1>
     <p>Your journey to health and mindfulness starts here. 🌱</p>
