--- a/contact.html
+++ b/contact.html
@@ -23,5 +23,7 @@
         <textarea id="message" name="message" rows="5" cols="30" required></textarea><br><br>
         <button type="submit">Send Message</button>
     </form>
+    <hr>
+<p><strong>Contact us via phone:</strong> +90 539 624 3000 </p>
 </body>
 </html>
