--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     </nav>
     <h1>Welcome to Tripti Yoga!</h1>
     <p>Your journey to health and mindfulness starts here. 🌱</p>
+    <img src="Ekran Resmi 2025-01-08 10.43.12.png" alt="Yoga Class Image" style="width:100%; max-width:600px;">
     <footer>© 2025 Tripti Yoga</footer>
 </body>
 </html>
