style index.html

--- a/index.html
+++ b/index.html
@@ -35,5 +35,19 @@
     <a href="about.html">About Us</a>
     <a href="contact.html">Contact</a>
     </nav>
+    <style>
+    footer nav {
+        text-align: center;
+        margin-top: 20px;
+    }
+    footer nav a {
+        margin: 0 10px;
+        color: #4caf50;
+        text-decoration: none;
+    }
+    footer nav a:hover {
+        text-decoration: underline;
+    }
+</style>
 </body>
 </html>
